@@ -2,6 +2,8 @@
 v6.0.0-git
 ----------
 
+[mms] Fix regression in updating dynamic folder list when deleting parent
+      mailboxes that contain children (Bug #11296).
 [mms] Fix regression preventing compose messages from being sent in the
       smartmobile view (Bug #11342).
 [jan] Allow to reset flag colors and to specify as HTML colors.
